added directory that is gitignored for output files (maps) and moved them there, adapted paths in notebook

--- a/visualization_accident_data.ipynb
+++ b/visualization_accident_data.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "id": "d37acbb5",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 72,
    "id": "0b235a40",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
          "type": "float"
         }
        ],
-       "ref": "694d8172-adcf-435e-b449-c3e4baa92a2e",
+       "ref": "7eaec906-8e56-42b0-8ec0-0a04a31f6e90",
        "rows": [
         [
          "0",
@@ -562,7 +562,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 73,
    "id": "3dfbe71f",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
          "type": "float"
         }
        ],
-       "ref": "c5f3270c-4f84-44e6-b487-d6a951d25073",
+       "ref": "38b23d58-b4fa-491a-95fb-27906d3ae874",
        "rows": [
         [
          "307975",
@@ -1105,7 +1105,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 74,
    "id": "b0f5b578",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "d3660605",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 76,
    "id": "1b055321",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 77,
    "id": "b6175b49",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 78,
    "id": "852ac8f6",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "725a80b5",
    "metadata": {},
    "outputs": [],
@@ -1399,12 +1399,12 @@
     "            fill_color='blue',\n",
     "            fill_opacity=0.6\n",
     "        ).add_to(accident_map)\n",
-    "accident_map.save(\"bicycle_accidents_berlin.html\")\n"
+    "accident_map.save(\"outputs/maps/bicycle_accidents_berlin.html\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 80,
    "id": "535941d3",
    "metadata": {},
    "outputs": [],
@@ -1413,7 +1413,7 @@
     "heat_data = df_bike_berlin[[\"YGCSWGS84\", \"XGCSWGS84\"]].values.tolist()\n",
     "m = folium.Map(location=[52.52, 13.40], zoom_start=15)\n",
     "HeatMap(heat_data, radius=15).add_to(m)\n",
-    "m.save(\"bicycle_accidents_heatmap_berlin.html\")"
+    "m.save(\"outputs/maps/bicycle_accidents_heatmap_berlin.html\")"
    ]
   },
   {
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 81,
    "id": "c8b4bb11",
    "metadata": {},
    "outputs": [],
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "id": "2bd0b394",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1653,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,294 +1670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "id": "7c95e52f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
-       "&lt;html&gt;\n",
-       "&lt;head&gt;\n",
-       "    \n",
-       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
-       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://code.jquery.com/jquery-3.7.1.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
-       "    \n",
-       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
-       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
-       "            &lt;style&gt;\n",
-       "                #map_13062bbe4f57d5a7907355766ad87509 {\n",
-       "                    position: relative;\n",
-       "                    width: 100.0%;\n",
-       "                    height: 100.0%;\n",
-       "                    left: 0.0%;\n",
-       "                    top: 0.0%;\n",
-       "                }\n",
-       "                .leaflet-container { font-size: 1rem; }\n",
-       "            &lt;/style&gt;\n",
-       "\n",
-       "            &lt;style&gt;html, body {\n",
-       "                width: 100%;\n",
-       "                height: 100%;\n",
-       "                margin: 0;\n",
-       "                padding: 0;\n",
-       "            }\n",
-       "            &lt;/style&gt;\n",
-       "\n",
-       "            &lt;style&gt;#map {\n",
-       "                position:absolute;\n",
-       "                top:0;\n",
-       "                bottom:0;\n",
-       "                right:0;\n",
-       "                left:0;\n",
-       "                }\n",
-       "            &lt;/style&gt;\n",
-       "\n",
-       "            &lt;script&gt;\n",
-       "                L_NO_TOUCH = false;\n",
-       "                L_DISABLE_3D = false;\n",
-       "            &lt;/script&gt;\n",
-       "\n",
-       "        \n",
-       "&lt;/head&gt;\n",
-       "&lt;body&gt;\n",
-       "    \n",
-       "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_13062bbe4f57d5a7907355766ad87509&quot; &gt;&lt;/div&gt;\n",
-       "        \n",
-       "&lt;/body&gt;\n",
-       "&lt;script&gt;\n",
-       "    \n",
-       "    \n",
-       "            var map_13062bbe4f57d5a7907355766ad87509 = L.map(\n",
-       "                &quot;map_13062bbe4f57d5a7907355766ad87509&quot;,\n",
-       "                {\n",
-       "                    center: [52.647170783052026, 13.505408191735143],\n",
-       "                    crs: L.CRS.EPSG3857,\n",
-       "                    ...{\n",
-       "  &quot;zoom&quot;: 16,\n",
-       "  &quot;zoomControl&quot;: true,\n",
-       "  &quot;preferCanvas&quot;: false,\n",
-       "}\n",
-       "\n",
-       "                }\n",
-       "            );\n",
-       "\n",
-       "            \n",
-       "\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_ddb36a84a0e580a1d8b920027a6629fb = L.tileLayer(\n",
-       "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
-       "                {\n",
-       "  &quot;minZoom&quot;: 0,\n",
-       "  &quot;maxZoom&quot;: 19,\n",
-       "  &quot;maxNativeZoom&quot;: 19,\n",
-       "  &quot;noWrap&quot;: false,\n",
-       "  &quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;,\n",
-       "  &quot;subdomains&quot;: &quot;abc&quot;,\n",
-       "  &quot;detectRetina&quot;: false,\n",
-       "  &quot;tms&quot;: false,\n",
-       "  &quot;opacity&quot;: 1,\n",
-       "}\n",
-       "\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            tile_layer_ddb36a84a0e580a1d8b920027a6629fb.addTo(map_13062bbe4f57d5a7907355766ad87509);\n",
-       "        \n",
-       "    \n",
-       "            var poly_line_9a5fae227a7a468f23b27154005cf328 = L.polyline(\n",
-       "                [[52.647170783052026, 13.505408191735143], [52.647961642321505, 13.506626916286965], [52.648331423277945, 13.50718339005138]],\n",
-       "                {&quot;bubblingMouseEvents&quot;: true, &quot;color&quot;: &quot;blue&quot;, &quot;dashArray&quot;: null, &quot;dashOffset&quot;: null, &quot;fill&quot;: false, &quot;fillColor&quot;: &quot;blue&quot;, &quot;fillOpacity&quot;: 0.2, &quot;fillRule&quot;: &quot;evenodd&quot;, &quot;lineCap&quot;: &quot;round&quot;, &quot;lineJoin&quot;: &quot;round&quot;, &quot;noClip&quot;: false, &quot;opacity&quot;: 0.8, &quot;smoothFactor&quot;: 1.0, &quot;stroke&quot;: true, &quot;weight&quot;: 5}\n",
-       "            ).addTo(map_13062bbe4f57d5a7907355766ad87509);\n",
-       "        \n",
-       "    \n",
-       "            poly_line_9a5fae227a7a468f23b27154005cf328.bindTooltip(\n",
-       "                `&lt;div&gt;\n",
-       "                     Your Path\n",
-       "                 &lt;/div&gt;`,\n",
-       "                {\n",
-       "  &quot;sticky&quot;: true,\n",
-       "}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "            var marker_f9f1a35e8705a5fee7f30bcec0df5000 = L.marker(\n",
-       "                [52.647170783052026, 13.505408191735143],\n",
-       "                {\n",
-       "}\n",
-       "            ).addTo(map_13062bbe4f57d5a7907355766ad87509);\n",
-       "        \n",
-       "    \n",
-       "            var icon_a92f45c3ba52a93a8b44baba3e952566 = L.AwesomeMarkers.icon(\n",
-       "                {\n",
-       "  &quot;markerColor&quot;: &quot;red&quot;,\n",
-       "  &quot;iconColor&quot;: &quot;white&quot;,\n",
-       "  &quot;icon&quot;: &quot;info-sign&quot;,\n",
-       "  &quot;prefix&quot;: &quot;glyphicon&quot;,\n",
-       "  &quot;extraClasses&quot;: &quot;fa-rotate-0&quot;,\n",
-       "}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "        var popup_52b4494ef74359216be59c4682300510 = L.popup({\n",
-       "  &quot;maxWidth&quot;: &quot;100%&quot;,\n",
-       "});\n",
-       "\n",
-       "        \n",
-       "            \n",
-       "                var html_75dd8ca6ea78dc79763e0f9aedaabb35 = $(`&lt;div id=&quot;html_75dd8ca6ea78dc79763e0f9aedaabb35&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Point 1: (52.647170783052026, 13.505408191735143)&lt;/div&gt;`)[0];\n",
-       "                popup_52b4494ef74359216be59c4682300510.setContent(html_75dd8ca6ea78dc79763e0f9aedaabb35);\n",
-       "            \n",
-       "        \n",
-       "\n",
-       "        marker_f9f1a35e8705a5fee7f30bcec0df5000.bindPopup(popup_52b4494ef74359216be59c4682300510)\n",
-       "        ;\n",
-       "\n",
-       "        \n",
-       "    \n",
-       "    \n",
-       "                marker_f9f1a35e8705a5fee7f30bcec0df5000.setIcon(icon_a92f45c3ba52a93a8b44baba3e952566);\n",
-       "            \n",
-       "    \n",
-       "            var marker_ba34508aaa2fa24c58e595b420de3494 = L.marker(\n",
-       "                [52.647961642321505, 13.506626916286965],\n",
-       "                {\n",
-       "}\n",
-       "            ).addTo(map_13062bbe4f57d5a7907355766ad87509);\n",
-       "        \n",
-       "    \n",
-       "            var icon_7d3546534e3962d3cb3988148c6bb80f = L.AwesomeMarkers.icon(\n",
-       "                {\n",
-       "  &quot;markerColor&quot;: &quot;red&quot;,\n",
-       "  &quot;iconColor&quot;: &quot;white&quot;,\n",
-       "  &quot;icon&quot;: &quot;info-sign&quot;,\n",
-       "  &quot;prefix&quot;: &quot;glyphicon&quot;,\n",
-       "  &quot;extraClasses&quot;: &quot;fa-rotate-0&quot;,\n",
-       "}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "        var popup_22abe77eb7832104004110a80a2ec902 = L.popup({\n",
-       "  &quot;maxWidth&quot;: &quot;100%&quot;,\n",
-       "});\n",
-       "\n",
-       "        \n",
-       "            \n",
-       "                var html_f7e59314c82056f90f82864c6e037a08 = $(`&lt;div id=&quot;html_f7e59314c82056f90f82864c6e037a08&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Point 2: (52.647961642321505, 13.506626916286965)&lt;/div&gt;`)[0];\n",
-       "                popup_22abe77eb7832104004110a80a2ec902.setContent(html_f7e59314c82056f90f82864c6e037a08);\n",
-       "            \n",
-       "        \n",
-       "\n",
-       "        marker_ba34508aaa2fa24c58e595b420de3494.bindPopup(popup_22abe77eb7832104004110a80a2ec902)\n",
-       "        ;\n",
-       "\n",
-       "        \n",
-       "    \n",
-       "    \n",
-       "                marker_ba34508aaa2fa24c58e595b420de3494.setIcon(icon_7d3546534e3962d3cb3988148c6bb80f);\n",
-       "            \n",
-       "    \n",
-       "            var marker_eeb5edfde20603b98f91a7296b54433f = L.marker(\n",
-       "                [52.648331423277945, 13.50718339005138],\n",
-       "                {\n",
-       "}\n",
-       "            ).addTo(map_13062bbe4f57d5a7907355766ad87509);\n",
-       "        \n",
-       "    \n",
-       "            var icon_02b82019cb1e6e913bddd24a8a702ead = L.AwesomeMarkers.icon(\n",
-       "                {\n",
-       "  &quot;markerColor&quot;: &quot;red&quot;,\n",
-       "  &quot;iconColor&quot;: &quot;white&quot;,\n",
-       "  &quot;icon&quot;: &quot;info-sign&quot;,\n",
-       "  &quot;prefix&quot;: &quot;glyphicon&quot;,\n",
-       "  &quot;extraClasses&quot;: &quot;fa-rotate-0&quot;,\n",
-       "}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "        var popup_78fd7a15deb1dc68225d2d3b2209bfec = L.popup({\n",
-       "  &quot;maxWidth&quot;: &quot;100%&quot;,\n",
-       "});\n",
-       "\n",
-       "        \n",
-       "            \n",
-       "                var html_a58d1115dbac6a544bb20c89a38a3d51 = $(`&lt;div id=&quot;html_a58d1115dbac6a544bb20c89a38a3d51&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;Point 3: (52.648331423277945, 13.50718339005138)&lt;/div&gt;`)[0];\n",
-       "                popup_78fd7a15deb1dc68225d2d3b2209bfec.setContent(html_a58d1115dbac6a544bb20c89a38a3d51);\n",
-       "            \n",
-       "        \n",
-       "\n",
-       "        marker_eeb5edfde20603b98f91a7296b54433f.bindPopup(popup_78fd7a15deb1dc68225d2d3b2209bfec)\n",
-       "        ;\n",
-       "\n",
-       "        \n",
-       "    \n",
-       "    \n",
-       "                marker_eeb5edfde20603b98f91a7296b54433f.setIcon(icon_02b82019cb1e6e913bddd24a8a702ead);\n",
-       "            \n",
-       "    \n",
-       "            var marker_c86205f464f6d1afad868fbfb01cbc57 = L.marker(\n",
-       "                [52.58347153600005, 13.403227970000046],\n",
-       "                {\n",
-       "}\n",
-       "            ).addTo(map_13062bbe4f57d5a7907355766ad87509);\n",
-       "        \n",
-       "    \n",
-       "            var icon_8249c64c2a790011b135b77559773fe7 = L.AwesomeMarkers.icon(\n",
-       "                {\n",
-       "  &quot;markerColor&quot;: &quot;blue&quot;,\n",
-       "  &quot;iconColor&quot;: &quot;white&quot;,\n",
-       "  &quot;icon&quot;: &quot;info-sign&quot;,\n",
-       "  &quot;prefix&quot;: &quot;glyphicon&quot;,\n",
-       "  &quot;extraClasses&quot;: &quot;fa-rotate-0&quot;,\n",
-       "}\n",
-       "            );\n",
-       "        \n",
-       "    \n",
-       "                marker_c86205f464f6d1afad868fbfb01cbc57.setIcon(icon_8249c64c2a790011b135b77559773fe7);\n",
-       "            \n",
-       "    \n",
-       "            tile_layer_ddb36a84a0e580a1d8b920027a6629fb.addTo(map_13062bbe4f57d5a7907355766ad87509);\n",
-       "        \n",
-       "    \n",
-       "                marker_f9f1a35e8705a5fee7f30bcec0df5000.setIcon(icon_a92f45c3ba52a93a8b44baba3e952566);\n",
-       "            \n",
-       "    \n",
-       "                marker_ba34508aaa2fa24c58e595b420de3494.setIcon(icon_7d3546534e3962d3cb3988148c6bb80f);\n",
-       "            \n",
-       "    \n",
-       "                marker_eeb5edfde20603b98f91a7296b54433f.setIcon(icon_02b82019cb1e6e913bddd24a8a702ead);\n",
-       "            \n",
-       "    \n",
-       "                marker_c86205f464f6d1afad868fbfb01cbc57.setIcon(icon_8249c64c2a790011b135b77559773fe7);\n",
-       "            \n",
-       "&lt;/script&gt;\n",
-       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
-      ],
-      "text/plain": [
-       "<folium.folium.Map at 0x20abd106470>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import folium\n",
     "\n",
-    "def plot_segment_on_map(segment_line, accident_lat, accident_long, output_file=\"map.html\"):\n",
+    "def plot_segment_on_map(segment_line, accident_lat, accident_long, output_file=\"outputs/maps/map.html\"):\n",
     "\n",
     "    # 2. Extract coordinates\n",
     "    # Shapely (and WKT) uses (Longitude, Latitude) -> (x, y)\n",
@@ -2014,12 +1734,12 @@
     "\n",
     "# Run the function\n",
     "map_obj = plot_segment_on_map(segment, accident_lat, accident_long)\n",
-    "map_obj"
+    "#map_obj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 84,
    "id": "756ef9b3",
    "metadata": {},
    "outputs": [],
@@ -2060,7 +1780,7 @@
     "\n",
     "# add Control for Layers\n",
     "folium.LayerControl().add_to(map)\n",
-    "map.save(\"big_new_map_with_all_the_layers.html\")"
+    "map.save(\"outputs/maps/big_new_map_with_all_the_layers.html\")"
    ]
   },
   {
