filtered for accidents on strava segments and created map to display

--- a/visualization_accident_data.ipynb
+++ b/visualization_accident_data.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "id": "d37acbb5",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "0b235a40",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
          "type": "float"
         }
        ],
-       "ref": "7eaec906-8e56-42b0-8ec0-0a04a31f6e90",
+       "ref": "de423d6a-66e6-4578-8b4d-b16e4b2725c1",
        "rows": [
         [
          "0",
@@ -562,7 +562,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "3dfbe71f",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
          "type": "float"
         }
        ],
-       "ref": "38b23d58-b4fa-491a-95fb-27906d3ae874",
+       "ref": "b75c3d03-03e6-497f-a02d-0c975edd08bf",
        "rows": [
         [
          "307975",
@@ -1105,7 +1105,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,251 +1421,119 @@
    "id": "05ba601f",
    "metadata": {},
    "source": [
-    "## Clean Dataset for Accidents with locations outside the Strava Streetsegments"
+    "## Clean Dataset for Accidents with locations outside the Strava Streetsegments\n",
+    "### Attempt 1: Use spatial join to assign segments to the accident locations\n",
+    "Challenges:\n",
+    "* need buffer on the accident locations -> what's the right size?\n",
+    "* because of the buffering, some accident locations have more than one segments assigned to them"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 81,
-   "id": "c8b4bb11",
+   "cell_type": "markdown",
+   "id": "0c01b2d2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "strava_segments = pd.read_parquet(path=\"data/strava_data/berlin_graph_geometry.parquet\")\n",
-    "strava_segments[\"geometry\"] = strava_segments[\"geometry\"].apply(shapely.wkt.loads)\n",
-    "df_bike_berlin = df_bike_berlin.reset_index(drop=True)"
+    "notice how the joined dataset for 15m buffer is bigger than the original one. This is due to duplicate accidents that are assigned to more than one segment and therefore duplicated in the spatial join.\n",
+    "\n",
+    "### Attempt 2: Use join_nearest to assign exactly one (the nearest) segment to each accident\n",
+    "Challenges:\n",
+    "* need to find the right maximum distance so accidents that are not on a segment are not assigned to one.\n",
+    "* assigns two segments if their distance is equal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "2bd0b394",
+   "execution_count": 25,
+   "id": "9e057056",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\grasl\\Documents\\Studium\\Master\\WS_25_26\\Data_Literacy_Project\\data_literacy\\.venv\\Lib\\site-packages\\geopandas\\array.py:408: UserWarning: Geometry is in a geographic CRS. Results from 'sjoin_nearest' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
-      "\n",
-      "  warnings.warn(\n"
+      "Total accidents: 33181\n",
+      "Total segments: 4958\n",
+      "Accidents assigned to segments: 20790\n",
+      "Accidents with ambiguous nearest segment: 6\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ULAND</th>\n",
-       "      <th>UREGBEZ</th>\n",
-       "      <th>UKREIS</th>\n",
-       "      <th>UGEMEINDE</th>\n",
-       "      <th>UJAHR</th>\n",
-       "      <th>UMONAT</th>\n",
-       "      <th>USTUNDE</th>\n",
-       "      <th>UWOCHENTAG</th>\n",
-       "      <th>UKATEGORIE</th>\n",
-       "      <th>UART</th>\n",
-       "      <th>...</th>\n",
-       "      <th>IstGkfz</th>\n",
-       "      <th>IstSonstige</th>\n",
-       "      <th>IstStrassenzustand</th>\n",
-       "      <th>PLST</th>\n",
-       "      <th>date</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>index_right</th>\n",
-       "      <th>counter_name</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>POINT (798261.3849 5835047.2599)</td>\n",
-       "      <td>2980</td>\n",
-       "      <td>streetsegment_2980</td>\n",
-       "      <td>52.647748</td>\n",
-       "      <td>13.506298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>POINT (800551.721 5829808.4924)</td>\n",
-       "      <td>2980</td>\n",
-       "      <td>streetsegment_2980</td>\n",
-       "      <td>52.647748</td>\n",
-       "      <td>13.506298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>POINT (803320.7292 5827627.4457)</td>\n",
-       "      <td>2980</td>\n",
-       "      <td>streetsegment_2980</td>\n",
-       "      <td>52.647748</td>\n",
-       "      <td>13.506298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>POINT (798174.6913 5826939.9775)</td>\n",
-       "      <td>2980</td>\n",
-       "      <td>streetsegment_2980</td>\n",
-       "      <td>52.647748</td>\n",
-       "      <td>13.506298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>POINT (806109.6297 5821644.4035)</td>\n",
-       "      <td>2980</td>\n",
-       "      <td>streetsegment_2980</td>\n",
-       "      <td>52.647748</td>\n",
-       "      <td>13.506298</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 33 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ULAND  UREGBEZ  UKREIS  UGEMEINDE  UJAHR  UMONAT  USTUNDE  UWOCHENTAG  \\\n",
-       "0     11        0       3          3   2018       1       15           4   \n",
-       "1     11        0       3          3   2018       1       11           5   \n",
-       "2     11        0       2          2   2018       1        8           2   \n",
-       "3     11        0       1          1   2018       1       19           4   \n",
-       "4     11        0       9          9   2018       1       18           4   \n",
-       "\n",
-       "   UKATEGORIE  UART  ...  IstGkfz  IstSonstige  IstStrassenzustand  PLST  \\\n",
-       "0           3     6  ...      0.0          NaN                 NaN   NaN   \n",
-       "1           3     5  ...      0.0          NaN                 NaN   NaN   \n",
-       "2           3     5  ...      0.0          NaN                 NaN   NaN   \n",
-       "3           3     5  ...      0.0          NaN                 NaN   NaN   \n",
-       "4           2     5  ...      0.0          NaN                 NaN   NaN   \n",
-       "\n",
-       "        date                          geometry  index_right  \\\n",
-       "0 2018-01-01  POINT (798261.3849 5835047.2599)         2980   \n",
-       "1 2018-01-01   POINT (800551.721 5829808.4924)         2980   \n",
-       "2 2018-01-01  POINT (803320.7292 5827627.4457)         2980   \n",
-       "3 2018-01-01  POINT (798174.6913 5826939.9775)         2980   \n",
-       "4 2018-01-01  POINT (806109.6297 5821644.4035)         2980   \n",
-       "\n",
-       "         counter_name   latitude  longitude  \n",
-       "0  streetsegment_2980  52.647748  13.506298  \n",
-       "1  streetsegment_2980  52.647748  13.506298  \n",
-       "2  streetsegment_2980  52.647748  13.506298  \n",
-       "3  streetsegment_2980  52.647748  13.506298  \n",
-       "4  streetsegment_2980  52.647748  13.506298  \n",
-       "\n",
-       "[5 rows x 33 columns]"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# transform strava segments and accident locations to GeoDataFrames\n",
-    "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
-    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.LINREFX, df_bike_berlin.LINREFY), crs=\"EPSG:4326\")\n",
+    "strava_segments = pd.read_parquet(path=\"data/strava_data/berlin_graph_geometry.parquet\")\n",
+    "strava_segments[\"geometry\"] = strava_segments[\"geometry\"].apply(shapely.wkt.loads)\n",
+    "df_bike_berlin = df_bike_berlin.reset_index(drop=True)\n",
     "\n",
-    "# join GeoDataFrames to assign segment names to accident data\n",
-    "joined = gpd.sjoin_nearest(accident_locations_gdf, strava_segments_gdf, how=\"left\")\n",
-    "joined.head()"
+    "# transform strava segments and accident locations to GeoDataFrames\n",
+    "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:32633\")\n",
+    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.XGCSWGS84, df_bike_berlin.YGCSWGS84), crs=\"EPSG:32633\")\n",
+    "\n",
+    "\n",
+    "# Add identifier to accidents\n",
+    "accident_locations_gdf = accident_locations_gdf.reset_index(drop=True)\n",
+    "accident_locations_gdf[\"acc_id\"] = accident_locations_gdf.index\n",
+    "\n",
+    "# Compute nearest segment\n",
+    "joined = gpd.sjoin_nearest(\n",
+    "    accident_locations_gdf,\n",
+    "    strava_segments_gdf,\n",
+    "    how=\"left\",\n",
+    "    max_distance=0.0001, # needs to be adjusted based on coordinate system and expected noise in distance, 10m\n",
+    "    distance_col=\"dist\"\n",
+    ")\n",
+    "\n",
+    "# drop accidents without assigned segment (NaN in index_right)\n",
+    "joined = joined.dropna(subset=[\"index_right\"])\n",
+    "\n",
+    "# drop duplicate accidents (when tie between distance to two segments, only keep first)\n",
+    "joined_nearest_unique = joined.drop_duplicates(subset=[\"acc_id\"])\n",
+    "print(f\"Total accidents: {len(accident_locations_gdf)}\")\n",
+    "print(f\"Total segments: {len(strava_segments_gdf)}\")\n",
+    "print(f\"Accidents assigned to segments: {len(joined_nearest_unique)}\")\n",
+    "print (f\"Accidents with ambiguous nearest segment: {len(joined) - len(joined_nearest_unique)}\")\n",
+    "\n",
+    "\n",
+    "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
+    "accident_locations_gdf = gpd.GeoDataFrame(df_bike_berlin, geometry=gpd.points_from_xy(df_bike_berlin.LINREFX, df_bike_berlin.LINREFY), crs=\"EPSG:4326\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "90645c13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create map displaying accidents and strava segments\n",
+    "map = folium.Map(location=[52.52, 13.40], zoom_start=12) \n",
+    "strava_segments_gdf = gpd.GeoDataFrame(strava_segments, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
+    "\n",
+    "# add strava segements to map\n",
+    "layer_segments = folium.FeatureGroup(\"Strava Segments\", show=True)\n",
+    "folium.GeoJson(\n",
+    "    strava_segments_gdf,\n",
+    "    style_function=lambda x: {\"color\": \"green\"}\n",
+    ").add_to(layer_segments)\n",
+    "map.add_child(layer_segments)\n",
+    "\n",
+    "\n",
+    "# add accidents to map\n",
+    "layer_accidents = folium.FeatureGroup(\"Bicycle Accidents\", show=True)\n",
+    "for _, row in joined_nearest_unique.iterrows():\n",
+    "    lat = row['YGCSWGS84']  \n",
+    "    lon = row['XGCSWGS84']  \n",
+    "    folium.CircleMarker(\n",
+    "        location=[lat, lon],\n",
+    "        radius=1,\n",
+    "        color='black',\n",
+    "        fill=True, \n",
+    "        fill_color='black',\n",
+    "        fill_opacity=0.6,\n",
+    "        popup=f\"Accident ID: {row['acc_id']}, Nearest Segment Index: {row['index_right']}\"\n",
+    ").add_to(layer_accidents)   \n",
+    "map.add_child(layer_accidents)\n",
+    "\n",
+    "folium.LayerControl().add_to(map)\n",
+    "map.save(\"outputs/maps/bicycle_accidents_with_segments_berlin.html\")\n"
    ]
   },
   {
@@ -1739,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "id": "756ef9b3",
    "metadata": {},
    "outputs": [],
@@ -1771,7 +1639,7 @@
     "            location=[lat, lon],\n",
     "            radius=1,\n",
     "            # set color according to involvement of car or pedestrian or other vehicles\n",
-    "            color='orange' if row['IstPKW'] == 1 else 'green' if row['IstFuss'] == 1 else 'yellow' if row['IstKrad'] == 1 else 'gray' if row['IstGkfz'] == 1 else 'blue' if row['IstSonstige'] == 1 else 'beige',\n",
+    "            color = 'orange',\n",
     "            fill=True,\n",
     "            fill_color='blue',\n",
     "            fill_opacity=0.6\n",
@@ -1782,14 +1650,6 @@
     "folium.LayerControl().add_to(map)\n",
     "map.save(\"outputs/maps/big_new_map_with_all_the_layers.html\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5863a709",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
